build/log/idf_py_stderr_output_232766
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/remoteLED/main/remoteLED.c: In function 'fetch_switch_state':
/home/pi/remoteLED/main/remoteLED.c:267:44: error: 'response_buffer' undeclared (first use in this function)
  267 |         ESP_LOGI(TAG, "Full Response: %s", response_buffer);
      |                                            ^~~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:267:9: note: in expansion of macro 'ESP_LOGI'
  267 |         ESP_LOGI(TAG, "Full Response: %s", response_buffer);
      |         ^~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:267:44: note: each undeclared identifier is reported only once for each function it appears in
  267 |         ESP_LOGI(TAG, "Full Response: %s", response_buffer);
      |                                            ^~~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:267:9: note: in expansion of macro 'ESP_LOGI'
  267 |         ESP_LOGI(TAG, "Full Response: %s", response_buffer);
      |         ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
